--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-account_sid="ACe3a3f05697646a8d0e1771bbf69417b1"
-auth_token="30f91fc063cd0efa51c717e5174b7595"
-number="+13054071181"
-personal_number="+919423514849"
+account_sid="XXXXXXXXXXXXXXXXXXXXXXX"
+auth_token="XXXXXXXXXXXXXXXXXXXXXXXX"
+number="+XXXXXXXXXXX"
+personal_number="+XXXXXXXXXXXX"
