Improved notifications,Failure notification

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-account_sid="XXXXXXXXXXXXXXXXXXXXXXX"
-auth_token="XXXXXXXXXXXXXXXXXXXXXXXX"
-number="+XXXXXXXXXXX"
-personal_number="+XXXXXXXXXXXX"
+account_sid="XXXXXXXXXXXXXXXXXXXXXXXXXXX"
+auth_token="XXXXXXXXXXXXXXXXXXXXXXXXX"
+number="+XXXXXXXXXXXXXXXXXXXXXXX"
+personal_number="+XXXXXXXXXXXXX"
